--- a/src/main/resources/templates/center.html
+++ b/src/main/resources/templates/center.html
@@ -10,11 +10,20 @@
     <script src="https://unpkg.zhimg.com/vue@2.6.12/dist/vue.js"></script>
     <script src="https://unpkg.zhimg.com/element-ui/lib/index.js"></script>
     <script src="static/js/jquery-2.2.3.min.js"></script>
+    <style type="text/css">
+        #indexApp{
+            display: flex;
+            flex-direction: column;
+        }
+        header{
+            background-color: rgb(201 234 209 / 47%);
+        }
 
+    </style>
 </head>
 <body>
 <div id="indexApp">
-    <header>
+    <header style="flex-grow: 0">
         <div class="header">
             <img src="static/img/icon_logo.png" @click="toIndex"/>
             <div class="topItemList">
@@ -37,7 +46,7 @@
             </div>
         </div>
     </header>
-    <div style="background: #f4f4f4;">
+    <div style="background: rgb(201 234 209 / 47%);padding-top: 50px;flex-grow: 1;">
         <div class="myCon">
             <div class="myCon_left">
                 <div class="myCon_left_top">
@@ -52,7 +61,7 @@
                     </div>
                 </div>
 
-                <div class="myCon_left_con">
+                <div class="myCon_left_con" style="text-align: center;line-height: 38px;">
                     <div @click="toSet">个人信息</div>
                     <div @click="myTravel">我的行程</div>
                     <div @click="myTiwen">上报体温</div>
@@ -63,12 +72,13 @@
                     <h4>我的信息</h4>
                     <div>
                         <el-form :model="ruleForm" ref="ruleForm" label-width="100px" class="demo-ruleForm">
-                        <el-form-item label="密码">
-                        <el-input v-model="ruleForm.password" type="password"></el-input>
-                        </el-form-item>
+
                         <el-form-item label="姓名">
                         <el-input v-model="ruleForm.nickname"></el-input>
                         </el-form-item>
+                            <el-form-item label="密码">
+                                <el-input v-model="ruleForm.password" type="password"></el-input>
+                            </el-form-item>
                             <el-form-item label="手机号">
                                 <el-input v-model="ruleForm.phone"></el-input>
                             </el-form-item>
@@ -120,7 +130,7 @@
         <div style="height: 50px;"></div>
     
     </div>
-    <footer>
+    <footer style="flex-grow: 0">
         <div>景区数据可视化系统</div>
         <div>Copyright &copy; 2022</div>
     </footer>
@@ -135,10 +145,24 @@
                         format="yyyy 年 MM 月 dd 日"
                         value-format="yyyy-MM-dd">
                 </el-date-picker>
-            </el-form-item>
+            </el-form-item >
             <el-form-item label="行程地点">
-                <el-input v-model="travelForm.xc_name"></el-input>
+
+                    <el-select v-model="travelForm.xc_name" placeholder="行程地点">
+                        <el-option label="龙门石窟" value="龙门石窟"></el-option>
+                        <el-option label="白马寺" value="白马寺"></el-option>
+                        <el-option label="洛阳老城" value="洛阳老城"></el-option>
+                        <el-option label="关林庙" value="关林庙"></el-option>
+                        <el-option label="洛阳博物馆" value="洛阳博物馆"></el-option>
+                        <el-option label="隋唐植物园" value="隋唐植物园"></el-option>
+                        <el-option label="国花园" value="国花园"></el-option>
+                        <el-option label="天子六驾博物馆" value="天子六驾博物馆"></el-option>
+                    </el-select>
+
             </el-form-item>
+<!--            <el-form-item label="行程地点">-->
+<!--                <el-input v-model="travelForm.xc_name"></el-input>-->
+<!--            </el-form-item>-->
             <el-form-item>
                 <el-button type="primary" style="margin-left:35%" @click="submitTravelForm">确认上报</el-button>
             </el-form-item>
@@ -164,7 +188,6 @@
 <!-- 全局js -->
 <script>
 
-    
 var basePath = "/" + window.location.pathname.split("/")[1];
 var indexApp = new Vue({
     el: "#indexApp",
@@ -341,15 +364,38 @@ var indexApp = new Vue({
             this.getPay();
         },
         toSet(){
-            this.selIndex=1;  
+            this.selIndex=1;
+            let num=this.selIndex-1;
+            let x=document.getElementsByClassName("myCon_left_con");
+            x=x[0];
+            let y=x.children;
+            for(let m=0;m<y.length;m++){
+                y[m].style.backgroundColor="white";
+            }
+            y[num].style.backgroundColor="#00a03ead";
         },
         myTravel(){
             this.selIndex=2;
-
+            let num=this.selIndex-1;
+            let x=document.getElementsByClassName("myCon_left_con");
+            x=x[0];
+            let y=x.children;
+            for(let m=0;m<y.length;m++){
+                y[m].style.backgroundColor="white";
+            }
+            y[num].style.backgroundColor="#00a03ead";
             this.getClot();
         },
         myTiwen(){
             this.selIndex=4;
+            let num=this.selIndex-2;
+            let x=document.getElementsByClassName("myCon_left_con");
+            x=x[0];
+            let y=x.children;
+            for(let m=0;m<y.length;m++){
+                y[m].style.backgroundColor="white";
+            }
+            y[num].style.backgroundColor="#00a03ead";
             this.getTiwen();
         },
         myPay(){
